syntax = "proto3";

package com.road.yishi.proto.campaign;

message PosMsg {
  int32 x = 1;
  int32 y = 2;
}
